[package]
name = "hello_lib"
version = "0.1.4"
edition = "2021"
authors = ["Ganesh Chandrasekaran"]
description = "Demonstrate Generics Function"
documentation = "https://docs.rs/hello_lib/latest/hello_lib/"
readme="README.md"
license = "MIT OR Apache-2.0"
keywords = ["demo", "generics","functions"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
