[package]
name = "hello_lib"
version = "0.1.5"
edition = "2021"
authors = ["Ganesh Chandrasekaran"]
description = "Demonstrate Generics Function"
documentation = "https://docs.rs/hello_lib"
readme="README.md"
license = "MIT"
keywords = ["demo", "generics","functions"]
categories = ["Text processing","General"]
repository = "https://github.com/rust-lang/cargo/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
