[package]
name = "hello_lib"
version = "0.1.6"
edition = "2021"
authors = ["Ganesh Chandrasekaran"]
description = "Demonstrate Generics Function"
documentation = "https://docs.rs/hello_lib"
readme="README.md"
license = "MIT"
keywords = ["demo", "generics","functions"]
categories = ["text-processing"]
repository = "https://github.com/gchandra10/hello_lib/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
